search page added

--- a/OMDB-Angular/src/app/app.component.html
+++ b/OMDB-Angular/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-landing-page [landingResponse]="landingResponse"></app-landing-page>
+<div class="container">
+    <app-header [searchValue]="searchValue"></app-header>
+    <app-landing-page [landingResponse]="landingResponse" [searchValue]="searchValue"></app-landing-page>
+</div>
